AUT-399 - Revert auth method choice buttons and green button size/weight increases, because contrast ratio was fixed with color change

--- a/disain/styles/components/_button.scss
+++ b/disain/styles/components/_button.scss
@@ -2,7 +2,6 @@
   display: inline-block;
   padding: 11px 35px;
   font-weight: 500;
-  font-size: 24px;
   border-radius: 8px;
   border: 0;
   cursor: pointer;
@@ -10,6 +9,7 @@
     display: block;
     width: 100%;
     padding: 12px 35px;
+    font-size: 18px;
   }
   &--primary {
     color: #fff;
