--- a/disain/styles/components/_tab-login.scss
+++ b/disain/styles/components/_tab-login.scss
@@ -115,8 +115,7 @@
     display: flex;
     align-items: center;
     white-space: nowrap;
-    font-size: 24px;
-    font-weight: 500;
+    font-size: 20px;
   }
   &__nav-back-link {
     display: none;
